Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberBooleanField.quorum
class Main
    boolean v = true
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
